# mect

./: README.md
AC/: router1.txt  router2.txt
AC/ExameTeorico/: EN2024.odt  info_exame
AC/ExameTeorico/EN2020/: ARA_EN_2020.txt
AC/ExameTeorico/ar_and_ar_exames_elearning/: ARA_EN_2016_res.txt  AR_EpEsp_2021_res.txt  AR_Rec_2021_res.txt
AC/ExameTeorico/teorico/: Teste2_ARA.txt  Teste_ARA(1).txt  perguntas&respostas1.txt
AC/testePratico/1/: respostas.txt
AC/testePratico/2/: 5.xcf  respostas.txt
AC/testePratico/3/: respostas.txt
AC/testePratico/4/: respostas.txt
CM/Exames/: Examples-answer.txt  Extra-Examples.txt  answers_random.txt  exame-redes-moveis
CM/Exames/Exame/Teórica/: Perguntas.docx
CM/Pratica/TestePratico1/: eleraningPreguntas.odt
ES/Elearning/: github-labels.md
ES/Projeto/: .env  .gitignore  README.md  docker-compose.yml  realm-export.json.template
ES/Projeto/.github/workflows/: build.yml  deploy.yml
ES/Projeto/backend/: Dockerfile
ES/Projeto/backend/allure-results/: 022a2922-fae9-451e-84bb-a41c06c47d9c-container.json  0774719b-d870-46c5-90df-dbea46883911-container.json  22775fe9-7105-43de-9a45-b16685c98048-container.json  2797b583-b426-4161-85bd-97037ac74acb-result.json  33d8bc5e-5a61-4e28-bdc5-e86f39c7a018-container.json  38222eeb-58e4-451c-87a2-8eb83b827a2a-result.json  38d35086-6bbe-45c1-be75-7be280933c5c-result.json  3deb8bd3-a2f5-4f73-b001-a3e6efa00951-container.json  3f75c330-d212-4729-9269-ce24a8f14ab7-container.json  50f9b11c-dbc6-43dd-bbaf-17fde1ba340a-container.json  604d75c5-453c-466a-b680-ba5624d01d14-container.json  9bb5169a-1bdb-47d1-b74e-c60948aa52da-result.json  af713a70-5630-4c49-bb89-f7569ad6a33a-container.json  c4aa76b4-9b55-436e-90b7-81d0ee35410b-result.json
ES/Projeto/docs/: observability.md
ES/Projeto/frontend/: Dockerfile  Dockerfile.local  Dockerfile.prod  README.md  package-lock.json  package.json
ES/Projeto/frontend/public/: silent-check-sso.html
ES/Projeto/frontend/src/: telemetry.js
ES/Projeto/observability/: otel-collector-config.yaml  prometheus.yml
ES/Projeto/scripts/: cleanup-terraform-state.sh  deploy-local.sh  destroy-local.sh  generate-realm.sh  setup-env.sh
ES/Projeto/terraform/: outputs.tf
ES/Teorico/: preparacaoTeorico.txt
ES/group-project-es2526_203/: .env.example
ES/group-project-es2526_203/.github/workflows/: infrastructure.yml  pipeline.yml  test.yml
ES/group-project-es2526_203/backend/: .gitignore  pom.xml
ES/group-project-es2526_203/backend/allure-results/: 17a5c4c3-f709-4e9a-807a-dfb603488ede-container.json  35646cdd-9a34-47f7-8fac-e70ce9e12c6b-container.json  4083ac00-5549-4082-81cf-762d36e8f51e-result.json  (+12 more)
ES/group-project-es2526_203/database/: init.sql
ES/group-project-es2526_203/frontend/: .env.development  .env.production  nginx.conf  tailwind.config.js
ES/group-project-es2526_203/scripts/: build.sh  run.sh
ES/group-project-es2526_203/terraform/: .gitignore  main.tf  terraform.tfvars.prod  variables.tf
IC/LabWork01/: Lab01_Report.docx  README.md
IC/LabWork01/src/: CMakeLists.txt  dct_decoder.cpp  dct_encoder.cpp  wav_cmp.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant_dec.cpp  wav_quant_enc.cpp  wav_stereo2mono.cpp
IC/LabWork01/test/: output.encoder
IC/LabWork02/: .gitignore  README.md
IC/LabWork02/output/: airplanemodified.ppm  bike_mirrorh.ppm  bike_mirrorv.ppm  boat_enc.golb  girl_rotated.ppm  monarch_negative.ppm  output_image.ppm
IC/LabWork02/src/: CMakeLists.txt  Makefile  audio_codec.cpp  audio_codec.h  audio_decode.cpp  audio_encode.cpp  extract_channel.cpp  golomb.cpp  golomb.h  golomb_test.cpp  image_codec.cpp  image_codec.h  image_decode.cpp  image_encode.cpp  mirror_img.cpp  modifyLight_img.cpp  negative_img.cpp  rotate_img.cpp
IC/LabWork03/: .gitignore  README.md
IC/LabWork03/results/: test_1212.md  test_1412.md  test_1812.md
IC/LabWork03/src/: CMakeLists.txt  base_codec.cpp  comp_codec.cpp  final_codec.cpp
IC/exercicios/Exercícios/: ic_respostas.txt
(+282 files in other folders)
